# Qwen3-TTS

./: .gitignore  README.md  pyproject.toml
qwen_tts/: __main__.py  httpx_client.py
qwen_tts/cli/: client.py  fastapi_service.py  server.py
scripts/: inspect_audio.py
tests/: test_fastapi_service.py  test_httpx_client.py  test_voice_clone_local.py
