[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen-tts"
version = "0.1.1"
description = "Qwen-TTS python package"
readme = "README.md"
requires-python = ">=3.12,<=3.14"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
license = { text = "Apache-2.0" }
authors = [{ name = "Alibaba Qwen Team" }]

dependencies = [
  "accelerate==1.12.0",
  "einops",
  "flash-attn;platform_system == 'Linux' and platform_machine == 'x86_64'",
  "fastapi",
  "gradio",
  "httpx",
  "librosa",
  "python-multipart",
  "torchaudio",
  "soundfile",
  "sox",
  "transformers==4.57.3",
  "uvicorn",
  "onnxruntime",
  "modelscope>=1.36.0",
  "huggingface-hub[cli]>=0.36.2",
  "pytest>=9.0.3",
]

[project.urls]
Homepage = "https://github.com/Qwen/Qwen3-TTS"
Repository = "https://github.com/Qwen/Qwen3-TTS"

[project.scripts]
qwen-tts-demo = "qwen_tts.cli.demo:main"
qwen-tts-client = "qwen_tts.cli.client:main"
qwen-tts-server = "qwen_tts.cli.server:main"

[tool.setuptools]
packages = { find = { where = ["."] , include = ["qwen_tts*"] } }
include-package-data = true

[tool.setuptools.package-data]
qwen_tts = ["py.typed", "**/*.npz"]
